fix nav z-index
images were underneath it

--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -101,7 +101,7 @@ footer a:target {
     left: 0;
     text-align: center;
     right: 0;
-    z-index: 9999;
+    z-index: 1;
     width: 100%;
     height: 80px;
     background-color: rgba(0, 0, 0, 0.45);
